syntax = "proto3";

package pb;

message BaseRequest {
  string request_id = 1;
  string update_by = 2;

}
message IDRequest {
  BaseRequest base = 1;
  int64 id = 2;
}

message IDResponse {
  int64 id = 1;
}

message IDString {
  BaseRequest base = 1;
  string id = 2;
}

message KeyRequest {
  BaseRequest base = 1;
  string key = 2;
}

message StringResponse {
  string value = 1;
}

message BoolResponse {
  bool value = 1;
}

message IntResponse {
  int64 value = 1;
}

message Empty {
  BaseRequest base = 1;
}

message KeyValueRequest {
  BaseRequest base = 1;
  string key = 2;
  string value = 3;
}

enum EmailContentType {
  text = 0;
  html = 1;
}

enum NotificationType {
  ios = 0;
  android = 1;
  mail = 2;
}

enum NotificationStatusCode {
  success = 0;
  error = 1;
}

enum DeviceType {
  apple = 0;
  google = 1;
}

enum DocumentType {
  passport = 0;
  drivers_license = 1;
  id_card = 2;
  proof_of_residence = 3;
}

enum DocumentFormat {
  png = 0;
  pdf = 1;
  jpg = 2;
  jpeg = 3;
}

enum DocumentSide {
  front = 0;
  back = 1;
}

enum MemoType {
  none = 0;
  memo_text = 1;
  id = 2;
  hash = 3;
  return = 4;
}

enum WalletType {
  internal = 0;
  external = 1;
}

enum NotificationParameterType {
  ios_title_localized_key = 0;
  ios_category = 1;
  ios_wallet_key = 2;
}